--- a/metadata.yaml
+++ b/metadata.yaml
@@ -13,7 +13,7 @@ serial_number: "025"
 doc_id: "ITTN-025"
 
 # Title of the document, without the series/serial designation
-doc_title: "Deployment of fibers and copper in office building at La Serena"
+doc_title: "La Serena Building Fiber/Copper Deployment"
 
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
